--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "webpack serve --config webpack/webpack.config.js --env env=dev --open",
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
     "lint": "eslint --fix \"./src/**/*.{ts,js,tsx,jsx,json}\"",
-    "format": "prettier --write \"./src/**/*.{ts,js,tsx,jsx,json,scss,md}\""
+    "format": "prettier --write \"./src/**/*.{ts,js,tsx,jsx,json,scss,md}\"",
+    "server": "json-server server/db.json -m ./node_modules/json-server-auth --port 3003",
+    "dev": "concurrently \"npm run server\" \"npm start\""
   },
   "keywords": [
     "react",
@@ -40,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "babel-loader": "^8.2.3",
+    "concurrently": "^7.0.0",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
     "eslint": "^8.11.0",
@@ -53,6 +56,8 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^4.3.8",
+    "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0",
     "lint-staged": "^12.3.6",
     "node-sass": "^7.0.1",
     "prettier": "^2.6.0",
