--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
     "lint": "eslint --fix \"./src/**/*.{ts,js,tsx,jsx,json}\"",
     "format": "prettier --write \"./src/**/*.{ts,js,tsx,jsx,json,scss,md}\"",
-    "server": "json-server server/db.json -m ./node_modules/json-server-auth --port 3003",
+    "server": "json-server server/db.json -m ./node_modules/json-server-auth -r server/routes.json --static server/assets --port 3003",
     "dev": "concurrently \"npm run server\" \"npm start\""
   },
   "keywords": [
